quicklog/tests/failures/expr_without_name_2.stderr
error: expected identifier
 --> tests/failures/expr_without_name_2.rs:8:11
  |
8 |     info!(&x);
  |           ^
